<resources>
    <string name="app_name">AskQ</string>

    <string name="bottom_nav_item_answer">Answer</string>
    <string name="bottom_nav_item_ui_design">UI Design</string>
    <string name="bottom_nav_item_notification">Notification</string>
    <string name="bottom_nav_item_profile">Profile</string>
    <string name="bottom_nav_item_home">Home</string>

    <string-array name="textInputColors">
        <item name="colorControlNormal">@color/hintColor</item>
        <item name="colorControlActivated">@color/black</item>
        <item name="colorControlHighlight">@color/link_blue</item>
    </string-array>

    <string name="ip">192.168.43.222</string>
</resources>
